--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <title>SYNC TEST</title>
 </head>
 <body>
-<input id = "input"></input>
-<button id = "but"> UPDATE </button>
+
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;"></canvas>
+
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 <script>
   // Initialize Firebase
@@ -21,18 +22,22 @@
 
   var database = firebase.database();
 
-  database.ref().set({
-  testval:"hi"
-  });
+
+  var canvas = document.getElementById("myCanvas")
+  var ctx = canvas.getContext("2d");
+        canvas.addEventListener('mousemove', function(evt) {
+          console.log('Mouse position: ' + evt.clientX + ',' + evt.clientY);
+          	database.ref().set({
+		  		  x:evt.clientX,
+		  		  y:evt.clientY
+	  		});
+      }, false);
+
   database.ref().on("value", function(e){
-  	document.write(e.val().testval);
+  	ctx.clearRect(0, 0, canvas.width, canvas.height);
+  	ctx.fillRect(e.val().x,e.val().y,10,10);
   });
 
-  document.getElementById("but").addEventListener("click", function(){
-		database.ref().set({
-		  testval:document.getElementById("input").value
-	  });
-  });
 </script>
 </body>
 </html>
